<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:padding="24dp"
    android:background="#f4f1f5"
    tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textColor="#4f5fbb"
        android:textSize="29sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="10dp"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="30sp"
        android:gravity="center"
        android:background="@drawable/bingkai"
        android:padding="15dp"
        >

        <ImageButton
            android:id="@+id/btn_buka_ras_tikus"
            android:layout_width="140sp"
            android:layout_height="100sp"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="0sp"
            android:layout_marginRight="0sp"
            android:layout_weight="1"
            android:padding="15sp"
            android:scaleType="fitCenter"
            android:src="@drawable/tikus_acomys" />

        <ImageButton
            android:id="@+id/btn_buka_ras_burung"
            android:layout_width="150sp"
            android:layout_height="100sp"
            android:layout_marginLeft="10sp"
            android:layout_toRightOf="@+id/btn_buka_ras_tikus"
            android:layout_weight="1"
            android:padding="15sp"
            android:scaleType="fitCenter"
            android:src="@drawable/burung_beo" />

        <ImageButton
            android:id="@+id/btn_buka_ras_paus"
            android:layout_width="140sp"
            android:layout_height="100sp"
            android:layout_below="@+id/btn_buka_ras_tikus"
            android:layout_marginLeft="0sp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5sp"
            android:padding="15sp"
            android:scaleType="fitCenter"
            android:src="@drawable/paus_biru" />

        <ImageButton
            android:id="@+id/btn_buka_ras_hiu"
            android:layout_width="150sp"
            android:layout_height="100sp"
            android:layout_below="@+id/btn_buka_ras_burung"
            android:layout_alignLeft="@+id/btn_buka_ras_burung"
            android:layout_marginTop="10sp"
            android:padding="15sp"
            android:scaleType="fitCenter"
            android:src="@drawable/blue_shark" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pilih_gambar"
        android:textStyle="italic"
        android:layout_marginBottom="32dp"
        android:textColor="#999"
        />

    <Button
        android:id="@+id/biodata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/btn_profil"/>

</LinearLayout>